# formation

./: .gitignore  README.md  docker-compose.yml  main.py  pgadmin-servers.json  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_structure_bronze_silver_gold.py
backend/: README.md  pyproject.toml  run-api.ps1
backend/alembic/: env.py
backend/alembic/versions/: 0001_structure_bronze_silver_gold.py
backend/src/indusense/: api.py  artifacts.py
backend/src/indusense/db/: gold_loader.py  models.py
backend/src/indusense/processing/: ingestion.py
backend/src/indusense/reporting/: __init__.py  graphs.py
docs/: dedoublonnage_imputation.md  definitions_classes_outliers.md  equilibrage_classes.md  execution_pipeline.md  gold_dataset.md  outliers.md
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
notebooks/: README.md  creation_bronze.ipynb  creation_silver.ipynb  graphes_rapports.ipynb
src/indusense/: __init__.py
src/indusense/db/: __init__.py  models.py
src/indusense/processing/: __init__.py  ingestion.py
