[project]
name = "formation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "pandas>=3.0.3",
    "psycopg[binary]>=3.2.9",
    "python-dotenv>=1.1.0",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.41",
]
