[project]
name = "formation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.17.2",
    "fastapi>=0.138.0",
    "matplotlib>=3.10.3",
    "pandas>=3.0.3",
    "psycopg[binary]>=3.2.9",
    "python-dotenv>=1.1.0",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.49.0",
]

[project.scripts]
build-gold-dataset = "indusense.processing.ingestion:main"
indusense-pipeline = "indusense.processing.ingestion:main"
indusense-api = "indusense.api:main"

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
